# simple-ga

./: GA.hs  simple-ga.cabal  take-a-rest.cabal  teika.cabal  test-ga-tree.hs  test-ga.hs
