name:                teika
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
maintainer:          Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable teika
  main-is:             teika.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
