name:                take-a-rest
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
maintainer:          Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable test-ga
  main-is:             test-ga.hs
  build-depends:       base        >=4.6  && <4.7
                     , array       >=0.4  && <0.5
                     , MonadRandom >=0.1  && <0.2
  default-language:    Haskell2010
  ghc-options:         -Wall
